# marrow

./: Cargo.toml  Changes.md  License.md  Readme.md  x.py
.github/workflows/: release.yml  test.yml
marrow/: Cargo.toml
marrow-convert/: Cargo.toml  Design.md
marrow-convert-derive/: Cargo.toml
marrow-convert-derive/src/: array_push.rs  default_builder.rs  lib.rs  type_info.rs
marrow-convert/src/: error.rs  lib.rs  tests.rs  typeinfo.rs
marrow-convert/src/impls/: collections.rs  primitives.rs  utils.rs  wrappers.rs
marrow-convert/src/impls/ext/: jiff.rs
marrow-convert/src/internal/: mod.rs  type_info.rs  util.rs
marrow-convert/src/internal/builder/: list.rs  mod.rs  option.rs  primitive.rs  struct.rs  union.rs
marrow-convert/src/internal/type_info_impls/: collections.rs  compounds.rs  mod.rs  primitives.rs  std.rs  utils.rs  wrappers.rs
marrow-convert/src/internal/type_info_impls/ext/: bigdecimal.rs  chrono.rs  jiff.rs  mod.rs  uuid.rs
marrow-convert/tests/: derive.rs
marrow-convert/tests/derive_tests/: mod.rs  test_array_push.rs  test_default_array_builder.rs  test_type_info.rs
marrow-typeinfo/: Cargo.toml
marrow-typeinfo-derive/: Cargo.toml
marrow-typeinfo-derive/src/: lib.rs
marrow-typeinfo/src/: lib.rs
marrow-typeinfo/src/ext/: bigdecimal.rs  chrono.rs
marrow-typeinfo/src/impls/: compounds.rs  std.rs  utils.rs
marrow-typeinfo/src/impls/ext/: uuid.rs
marrow-typeinfo/tests/: derive.rs
marrow/src/: _impl.rs  array.rs  bits.rs  datatypes.rs  error.rs  impl.rs  lib.rs  meta.rs  testing.rs  types.rs  view.rs
marrow/src/_impl/: arrow.rs  mod.rs
marrow/src/_with_latest_arrow/: arrow.rs  mod.rs  test.rs  test_data_types.rs
marrow/src/_with_latest_arrow/test/: arrays.rs  data_types.rs  mod.rs
marrow/src/impl_arrow/: impl_api_37.rs  impl_api_47.rs  impl_api_53.rs  impl_api_base.rs  mod.rs
marrow/src/impl_arrow2/: impl.rs  mod.rs
test_with_arrow/: Cargo.toml
test_with_arrow/src/: lib.rs
test_with_arrow/src/tests/: arrays.rs  fixed_size_binary_arrays.rs  intervals.rs  union_arrays.rs  utils.rs  views.rs
